kubernetes/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  namespace: open-webui
  annotations:
    # Traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # ExternalDNS
    external-dns.alpha.kubernetes.io/hostname: open-webui.homelab.jonasg.be
    # cert-manager
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    # IMPORTANT: Argo CD expects HTTPS
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - open-webui.homelab.jonasg.be
    secretName: open-webui-tls
  rules:
  - host: open-webui.homelab.jonasg.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-webui
            port:
              number: 8080
